syntax = "proto3";

package flyteidl.common;

option go_package = "github.com/flyteorg/flyte/v2/gen/go/common";

// Runtime information. This is loosely defined to allow for extensibility.
message RuntimeMetadata {
  enum RuntimeType {
    OTHER = 0;
    FLYTE_SDK = 1;
    UNION_SDK = 2;
  }

  // Type of runtime.
  RuntimeType type = 1;

  // Version of the runtime. All versions should be backward compatible. However, certain cases call for version
  // checks to ensure tighter validation or setting expectations.
  string version = 2;

  //+optional It can be used to provide extra information about the runtime (e.g. python, golang... etc.).
  string flavor = 3;
}
